# IsImgCvQtGuiApp

./: .gitignore  CMakeLists.txt  README.md
GuiApp/: CGMainWindow.cpp  CGMainWindow.h  CGWindow.cpp  CGWindow.h  CMakeLists.txt  CMake_QtImgProcGuiApp_ja.JP.ts  CVCameraStreamWindow.cpp  CVCameraStreamWindow.h  CVCanvasScene.cpp  CVCanvasScene.h  CVCanvasView.cpp  CVCanvasView.h  CVCanvasWindow.cpp  CVCanvasWindow.h  CVCommon.h  CVComponent.cpp  CVComponent.h  CVDataListModel.cpp  CVDataListModel.h  CVDataModel.h  CVDataModelFactory.cpp  CVDataModelFactory.h  CVDefs.h  CVEngine.cpp  CVEngine.h  CVFileStreamWindow.cpp  CVFileStreamWindow.h  CVGraphNodeItem.h  CVIPComponent.cpp  CVIPComponent.h  CVIPScriptPlugin.h  CVIPScriptPluginManager.cpp  CVIPScriptPluginManager.h  CVIPScriptTask.cpp  CVIPScriptTask.h  CVIPTask.cpp  CVIPTask.h  CVIPTaskController.cpp  CVIPTaskController.h  CVIdsMonoCamWindow.cpp  (+48 more)
